# mtgadmin

./: .gitignore  Makefile  README.md  docker-compose.yml
combined_service/: Dockerfile  pyproject.toml
combined_service/combined_mtg/: config.py  main.py
combined_service/combined_mtg/application/: card.py
combined_service/combined_mtg/domain/: card.py
combined_service/combined_mtg/infrastructure/api/: api.py
combined_service/combined_mtg/infrastructure/grpc/: mtg_card_pb2_grpc.py
combined_service/combined_mtg/infrastructure/grpc/connections/: grpc_server.py  grpc_service.py
combined_service/combined_mtg/infrastructure/repository/: mongodb_repository.py  repository.py
common/data/: example_cards.json
protobufs/: Readme.md  mtg_card.proto
srv_mtga_be/: .env  Dockerfile  README.md  main.py  mtg_card_pb2.py  mtg_card_pb2_grpc.py  pyproject.toml  requirements.txt
srv_mtga_be/mtg/: main.py  mtg_card_pb2.py  mtg_card_pb2_grpc.py
srv_mtga_be/mtg/connections/: grpc_server.py  grpc_service.py
srv_mtga_be/mtg/entities/: card.py  card_foreign.py
srv_mtga_be/mtg/repository/: grpc_repository.py  mongodb_repository.py
srv_mtga_be_fa/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
srv_mtga_be_fa/mtg/application/: card.py
srv_mtga_be_fa/mtg/infrastructure/api/: api.py
srv_mtga_be_fa/mtg/infrastructure/repository/: mongodb_repository.py  repository.py
srv_mtga_be_fa/mtg/repository/: mongodb_repository.py
srv_mtga_be_grpc_fa/: Dockerfile  main.py  requirements.txt
srv_mtga_be_grpc_fa/mtg/entities/: card.py
srv_mtga_be_grpc_fa/mtg/repository/: grpc_repository.py
srv_mtga_combined/: Dockerfile  main.py  mtg_card_pb2.py  pyproject.toml
srv_mtga_combined/mtg/application/: card.py
srv_mtga_combined/mtg/connections/: api_service.py  grpc_service.py
srv_mtga_combined/mtg/domain/: card.py
srv_mtga_combined/mtg/repository/: card_repository.py  mongodb_repository.py
srv_mtga_combined/tests/card/: test_card.py
srv_mtga_fe/: .env  Dockerfile  README.md  main.py  mtg_card_pb2.py  mtg_card_pb2_grpc.py  pyproject.toml  requirements.txt
srv_mtga_fe/application/api/: api_cards.py
srv_mtga_fe/application/grpc/: grpc_cards.py
srv_mtga_fe/mtg/: main.py  mtg_card_pb2_grpc.py
srv_mtga_fe/mtg/application/api/: api_cards.py
srv_mtga_fe/mtg/application/grpc/: grpc_cards.py
